# LaREST

./: .gitignore  README.md  environment.txt  environment.yaml  pipeline.sh  pyproject.toml  todo.md
config/: .censo2rc  config.toml  crest.toml  defaults.toml  general.conf  input.txt  logging.conf  logging.toml  step1.toml  step2.toml  step2_censo.toml
docs/source/: conf.py  index.rst  larest.helpers.rst  larest.rst  modules.rst
output/step1/: results_O=C1CCO1.csv
src/larest/: __init__.py  base.py  calculators.py  checkpoint.py  chem.py  constants.py  exceptions.py  helpers.py  main.py  output.py  parsers.py  setup.py  step1.py  step2.py
src/larest/config/: parsers.py  pipeline.ini
src/larest/helpers/: chem.py  constants.py  output.py  parsers.py  setup.py
tests/: plot_vertical.py
tests/ring_size/: generate_results.py  pipeline10.sh  pipeline11.sh  pipeline4.sh  pipeline5.sh  pipeline6.sh  pipeline7.sh  pipeline8.sh  pipeline9.sh  plot_vertical.py
tests/ring_size/config/: config.toml
tests/ring_size/config10/: config.toml
tests/ring_size/config11/: config.toml
tests/ring_size/config4/: config.toml
tests/ring_size/config5/: config.toml
tests/ring_size/config6/: config.toml
tests/ring_size/config7/: config.toml
tests/ring_size/config8/: config.toml
tests/ring_size/config9/: config.toml
tests/ring_size/data/: computational_1_SCREENING.csv  computational_2_OPTIMIZATION.csv  (+5 more)
tests/tropic/: experimental.csv  experimental_detailed.csv  get_experimental_data.py  input_experimental.xlsx
tests/tu-2023/: experimental.csv  pipeline.sh  plotting.py
(+215 files in other folders)
